# coco-slide-capture

./: .clangd  .gitignore  CMakeLists.txt  SPEC.md  flake.nix
EDSDK/Doc/: 04-Asynchronous-Events.md
include/: CameraManager.h  EDSDKCompatibility.h  EventHandler.h  FileManager.h  LiveViewRenderer.h
include/camera/: CameraManager.h  ExifWriter.h  LiveViewRenderer.h
include/ui/: MainWindow.h
src/: CameraManager.cpp  EventHandler.cpp  FileManager.cpp  LiveViewRenderer.cpp  main.cpp
src/camera/: CameraManager.cpp  ExifWriter.cpp  LiveViewRenderer.cpp
src/ui/: BatchDialog.cpp  BatchDialog.h  InputHandler.cpp  InputHandler.h  LiveViewDrawer.cpp  LiveViewDrawer.h  MainWindow.cpp  UIBuilder.cpp  UIBuilder.h
test_build/: CMakeCache.txt  Makefile  cmake_install.cmake  compile_commands.json
